added drew text

--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -131,7 +131,7 @@
 
 
 							<small>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read
+								<a id="show" target="_blank" href="https://www.newreal.cc/magazine/preternatural-curatorial-statement">Read
 									curatorial text by Drew Hemment, Edinburgh Futures Institute.<br></a>
 								</p>
 								<p>
