--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	<section id="works" class="">
 		<div class="container">
 
-			<!-- <a href="project-termsandconditionsopera.html" class="permalink">				
+			<a href="project-termsandconditionsopera.html" class="permalink">				
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-termsandconditionsopera.jpg" alt="Jake Elwes digital artist" />
@@ -149,18 +149,6 @@
 						<h3>Terms &amp; Conditions Opera – A Legalese Libretto</h3>
 
 						<span style="display:block" class="category">video &amp; music, 2024</span>
-					</div>
-				</div>
-			</a> -->
-
-			<a href="https://artinthecageofdigitalreproduction.org/" target="_blank" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-prpuppets.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Art in the Cage of Digital Reproduction</h3>
-
-						<span style="display:block" class="category">action and collection of writings, 2024</span>
 					</div>
 				</div>
 			</a>
@@ -177,6 +165,18 @@
 				</div>
 			</a>
 
+			<a href="https://artinthecageofdigitalreproduction.org/" target="_blank" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-prpuppets.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Art in the Cage of Digital Reproduction</h3>
+
+						<span style="display:block" class="category">action and collection of writings, 2024</span>
+					</div>
+				</div>
+			</a>
+			
 			<a href="project-sontag.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
