--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -133,11 +133,13 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/vtpVr5KVvnk"
+				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/hcghgft566666666666"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 					<small><small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020
 				</small></small>
+				
+				-- video extract coming soon (watch this space) ---
 
 				<br><br><br>
 
