--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -136,11 +136,11 @@
 				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/hcghgft566666666666"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					<small><small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020
-				</small></small>
-				
-				-- video extract coming soon (watch this space) ---
 
+
+				<div>
+				-- video extract coming soon (watch this space) ---
+</div>
 				<br><br><br>
 
 				
