added drew text

--- a/about.html
+++ b/about.html
@@ -168,18 +168,7 @@
 
 				<p id="bio" style="margin-top:35px;">
 
-
-					Jake Elwes (b.1993, UK) is an artist, hacker, radical faerie and researcher living in
-					London. Across projects that encompass moving-image
-					installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and
-					subverting technology.
-					Their work searches for poetry and narrative in the successes and failures of digital systems. Works
-					include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn
-					and reframing AI generated marsh birds back into nature in CUSP. They have been making art exploring
-					the aesthetics and ethics of machine learning systems since the very first generative AI models in
-					2016. Jake’s work also calls for us to challenge who builds these systems and for what purpose, and
-					whether we as artists and queers can reclaim these technologies to build our own digital utopias.
-
+					Jake Elwes (b.1993, UK) is a conceptual artist, hacker, radical faerie and researcher living in London. They have been making critically engaged art exploring the aesthetics and ethics of machine learning systems since the very first generative AI models in 2016. Across projects that encompass moving-image installation, sound and performance, Jake's work finds unusual ways of demystifying, mapping and subverting technology. Their work searches for poetry and narrative in the successes and failures of digital systems. Works include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn and reframing AI generated marsh birds back into nature in CUSP. Jake's work also calls for us to challenge who builds these systems and for what purpose, and whether we as artists and queers can reclaim these technologies to build our own digital utopias.
 
 					<!-- 2023.. Jake Elwes (b.1993) is an artist living and working in London. They studied at The Slade School
 					of Fine Art, UCL (2013-17). Searching for poetry and narrative in the success and failures of AI
