--- a/project-doomscroll.html
+++ b/project-doomscroll.html
@@ -116,10 +116,14 @@
 								anything and as my back started to ache I began seeing only shapeless forms and colours.
 								These recordings are then turned into long photographic scrolls displaying the passage
 								of time. The resulting series of scrolls visualise small chunks of time from this larger
-								performance.
+								performance. 
+								
+								<p>
+									Queer time and the fuzzy representations of time play a key part in the work. Whether that be the rendering of time through slit scan, the strange sense of loosing time when enacting the drromscrolling performance and the 7 months it took to render the video on my outdated GPU computer.
+								</p>
 							</p>
 							<p>
-								I’m converting time spent on Instagram into abstract, generative drawings with light.
+								The abstract, generative drawings with light convert time wasted on Instagram into something sublime.
 								The appropriated data passing through the lens are social media posts which people have
 								chosen to publicly share. Early utopian computer artists used code to make drawing
 								machines. ‘DoomScroll’ advances this process with results mediated through an
