--- a/project-doomscroll.html
+++ b/project-doomscroll.html
@@ -119,7 +119,7 @@
 								performance. 
 								
 								<p>
-									Queer time and the fuzzy representations of time play a key part in the work. Whether that be the rendering of time through slit scan, the strange sense of loosing time when enacting the drromscrolling performance and the 7 months it took to render the video on my outdated GPU computer.
+									Queer time and the fuzzy representations of time play a key part in the work. Whether that be the rendering of time through slit scan, the strange sense of losing time when enacting the doomscrolling performance or the 7 months it took to render the video on my outdated GPU computer.
 								</p>
 							</p>
 							<p>
