--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -19,9 +19,9 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="https://www.jakeelwes.com/images/project-zizi-and-me.jpg">
+	<meta property="og:image" content="https://www.jakeelwes.com/images/project-termsandconditionsopera.jpg">
 	<meta name="twitter:site" content="@jakeelwes" />
-	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi-and-me.jpg" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-termsandconditionsopera.jpg" />
 
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
@@ -122,29 +122,31 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
-				
-				<div>
-				-- video extract coming soon (watch this space) ---
-</div>
 
-				<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
 				<script>
 					function resizeDivs() {
-						$('#vid').css("height", $('#vid').width() / 0.56);
-						$('#vid2').css("height", $('#vid').width() / 0.56);
-						$('#vid1').css("height", $('#vid').width() / 1.5);
+						$('#vid').css("height", $('#vid').width() / 0.5625);
+						$('#vid2').css("height", $('#vid2').width() / 0.5625);
+						$('#vid1').css("height", $('#vid1').width() / 0.5625);
 					}
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
 
-				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/hcghgft566666666666"
+				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/5mSuU_eiPFo"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-
 				<br><br><br>
 
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/QZea-co5XAo"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<br><br><br>
+
+			<iframe id="vid1" width="100%" height="360" src="https://www.youtube.com/embed/8njianDthvY"
+			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+			webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<br><br><br>
 				
 
 
