added vid captions

--- a/project-sontag.html
+++ b/project-sontag.html
@@ -90,7 +90,7 @@
 						<div class="box-info">
 							<h3 class="border-top">A.I. Interprets A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)
 							</h3>
-							<p class="project-desc">2023, 3 channel video with sound, 25 minute loop
+							<p class="project-desc">2023, video with sound, 25 minute loop
 							</p>
 							<p>
 
@@ -121,13 +121,14 @@
 				<iframe id="vid2" src="https://player.vimeo.com/video/1046599105?color=ffffff&title=0&byline=0&portrait=0"
 				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 				allowfullscreen></iframe>
+				<small>Single channel version (extract)</small><br><br>
+
 				
-				<br><br>
 
 				<iframe id="vid" src="https://player.vimeo.com/video/831931323?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>3 channel version installed at Gazelli Art House, London 2023</small><br><br>
+					<small>3 channel version (extract) installed at Gazelli Art House, London 2023</small><br><br>
 
 				<script>
 					function resizeDivs() {
