--- a/project-doomscroll.html
+++ b/project-doomscroll.html
@@ -162,6 +162,7 @@
 				<iframe id="vid" src="https://player.vimeo.com/video/891676003?loop=1&title=0&byline=0&portrait=0"
 				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 				allowfullscreen></iframe>
+				<small>DoomScroll (video extracts)</small>
 				
 				<img src="images/project-doomscroll/doomscroll1.jpeg" alt="Jake Elwes doomscroll" />
 				<img src="images/project-doomscroll/doomscroll2.jpeg" alt="Jake Elwes doomscroll" />
