--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -98,13 +98,13 @@
 							</p>
 
 							<p>
-								A music AI being fed on its own legalese. In a self-referential loop, OpenAI and Suno's Terms and Conditions are reinterpreted through Suno's own AI music generation software.
+								A music AI being fed on its own legalese. In a self-referential loop, OpenAI and Suno's Terms and Conditions are reinterpreted into a kaleidoscopic opera of scattered genres.
 							</p><p>
-								The true content of corporate AI systems lies not in their generated output (which are merely mimetic, superficial forms and derivative simulacra), but in their legal frameworks: the policies, copyrights, intellectual property, and terms of usage that demand real human labor and political engagement.
+								The true content of corporate AI systems lies not in their generated output (which are merely imitative, superficial and derivative forms), but in their legal frameworks: the policies, copyrights, intellectual property, and terms of usage that demand real human labor and political engagement.
 							</p><p>	
 								Prompting corporate AI models can feel very limited and troubling - almost as if you’re giving part of your soul to help improve their models. Not wanting to give their model anything of myself, I instead fed it on itself, having it absurdly interpret its own governing laws.
 							</p><p>
-								AI is forcing us to radically reinvent intellectual and creative property laws (both OpenAI and Suno are currently being sued for copyright infringements). The revisions being shoehorned into this newly evolving landscape are buried in boring documents none of us read, but when set to mimetic music their jargon becomes more accessible. Decadently feeding an AI on itself resulting in a surreal opera: an unproductive and 'de'-generative AI.
+								AI is forcing us to radically reinvent intellectual and creative property laws (both OpenAI and Suno are currently being sued for copyright infringements). The revisions being shoehorned into this newly evolving landscape are buried in boring documents none of us read, but when set to mimetic music their jargon becomes both more readable and laughable. Decadently feeding an AI on itself (a de-generative AI) resulting in an absurdist AI opera.
 							</p>
 
 						</div><!-- // .box-info -->
