--- a/about.html
+++ b/about.html
@@ -217,7 +217,10 @@
 
 				<br>
 				<img src="images/about-bio.jpg" class="aboutimg" alt="talks by jake elwes">
-				<img src="images/about-bio2.jpg" class="aboutimg" alt="talks by jake elwes"> <br>
+				<img src="images/about-bio copy.jpg" class="aboutimg" alt="talks by jake elwes">
+				<img src="images/about-bio2.jpg" class="aboutimg" alt="talks by jake elwes"> 
+				<img src="images/about-bio2 copy.jpg" class="aboutimg" alt="talks by jake elwes"> 
+				<br>
 				<br>
 
 				<p>
@@ -320,7 +323,10 @@
 					</p>
 					<br>
 					<img src="images/about-shows.jpg" class="aboutimg" alt="talks by jake elwes">
-					<img src="images/about-shows2.jpg" class="aboutimg" alt="talks by jake elwes"> <br>
+					<img src="images/about-shows copy.jpg" class="aboutimg" alt="talks by jake elwes">
+					<img src="images/about-shows2.jpg" class="aboutimg" alt="talks by jake elwes"> 
+					<img src="images/about-shows2 copy.jpg" class="aboutimg" alt="talks by jake elwes"> 
+					<br>
 					<br>
 
 
@@ -864,7 +870,9 @@
 
 					<br>
 					<img src="images/about-perfomances2.jpg" class="aboutimg" alt="talks by jake elwes">
+					<img src="images/about-perfomances2 copy.jpg" class="aboutimg" alt="talks by jake elwes">
 					<img src="images/about-perfomances.jpg" class="aboutimg" alt="talks by jake elwes">
+					<img src="images/about-perfomances copy.jpg" class="aboutimg" alt="talks by jake elwes">
 					<br>
 					<p>
 						<b>2023</b><br>
@@ -955,7 +963,9 @@
 
 						<br>
 						<img src="images/about-talks.jpg" class="aboutimg" alt="talks by jake elwes">
+						<img src="images/about-talks copy.jpg" class="aboutimg" alt="talks by jake elwes">
 						<img src="images/about-talks2.jpg" class="aboutimg" alt="talks by jake elwes">
+						<img src="images/about-talks2 copy.jpg" class="aboutimg" alt="talks by jake elwes">
 
 
 
