added SFMOMA and Upstream

--- a/about.html
+++ b/about.html
@@ -337,11 +337,18 @@
 						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
 
 						<p></p>
-							<b>8th Feb 2025 - 4th May 2025</b> - <a id=show target="_blank"
-								href="https://www.hasselbladfoundation.org/en/portfolio_page/bugs-metamorphosis/">Bugs & Metamorphosis: Glitching Photography</a>, <b>Hasselblad Center, Gothenburg Museum of Art</b>, Sweden 
-						</p>						
+						<b>2025/26 (tba)</b> - Zizi in Motion (acquisition for permanent collection)</a>, <b>San Francisco Museum of Modern Art (SFMOMA), San Francisco</b>, US 
+					</p>	
 						<p></p>
-							<b>13th Jun 2025 - 7th Sept 2025</b> - <a id=show target="_blank"
+							<b>8th Feb - 4th May 2025</b> - <a id=show target="_blank"
+								href="https://www.hasselbladfoundation.org/en/portfolio_page/bugs-metamorphosis/">Bugs & Metamorphosis: Glitching Photography</a>, <b>Hasselblad Center, Gothenburg Museum of Art</b>, Sweden 
+						</p>		
+						<p></p>
+						<b>15th March - 25th April 2025</b> - <a id=show target="_blank"
+							href="https://www.upstreamgallery.nl/exhibitions/257/ghosts">Ghosts</a>, <b>Upstream Gallery</b>, Amsterdam, Netherlands 
+					</p>					
+						<p></p>
+							<b>13th Jun - 7th Sept 2025</b> - <a id=show target="_blank"
 								href="https://kunsthalaarhus.dk/en/Exhibitions/Kunsten-At-Fejle-The-Art-Of-Failing-1-Bugs-And-Metamorphosis">Kunsten at fejle / The Art of Failing 1: Bugs and Metamorphosis</a>, <b>Kunsthala Arhus</b>, Denmark 
 						</p>	
 						<p></p>
@@ -987,6 +994,7 @@
 
 					<h4 id="coll">Collections</h4>
 					<p>
+						San Francisco Museum of Modern Art, US <br>
 						V&amp;A | Victoria and Albert Museum of Art and Design, London <br>
 						ZKM | Center for Art and Media, Karlsruhe<br>
 						Zabludowicz Collection, London<br>
