Added prizes shortlists about.html

--- a/about.html
+++ b/about.html
@@ -977,6 +977,9 @@
 
 
 					<h4 id="prizes">Prizes</h4>
+					
+										<p>Jarman Award, Nominated, 2024</p>
+										<p>Deutsche Börse Foundation Photography Prize, Longlisted, 2023</p>
 					<p><a id=show target="_blank" href="https://calls.ars.electronica.art/2022/prix/winners/9213/">Prix
 							Ars Electronica - Interactive Art + (Honorary Mention)</a>, 2022 </p>
 
