--- a/index.html
+++ b/index.html
@@ -25,29 +25,20 @@
 	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi-show.jpg" />
 
 	<!-- CSS Files
-	* cssreset-min.css 			- CSS reset
-	* typegrid.css				- Responsive grid system
-	* style.css					- Main CSS file
-
-	Original LESS Stylesheet
-	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 	================================================== -->
 	<link rel="stylesheet" type="text/css" href="css/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&display=swap' rel='stylesheet' type='text/css'>
 
 	<!-- <script type="text/javascript" src="js/logoText.js"></script> -->
 
-	<!--[if lt IE 8]>
-		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
-	<![endif]-->
-
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<![endif]-->
 
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&display=swap' rel='stylesheet' type='text/css'>
 
 	<script>
 		(function (i, s, o, g, r, a, m) {
@@ -59,7 +50,6 @@
 
 		ga('create', 'UA-40831263-1', 'auto');
 		ga('send', 'pageview');
-
 	</script>
 
 	<!-- Favicons
@@ -141,6 +131,18 @@
 	<section id="works" class="">
 		<div class="container">
 
+			<a href="project-punaLandscapes.html" class="permalink">				
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-punaLandscapes.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Puna Landscapes: Geometries and Cartographies</h3>
+
+						<span style="display:block" class="category">photographic series, 2025</span>
+					</div>
+				</div>
+			</a>
+
 			<a href="project-termsandconditionsopera.html" class="permalink">				
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -182,7 +184,7 @@
 					<div class="item">
 						<img src="images/project-Sontag.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>A.I Interprets A.I. Interpreting ‘Against Interpretation’</h3>
+						<h3>A.I Interprets A.I. Interpreting 'Against Interpretation'</h3>
 
 						<span style="display:block" class="category"><b>(Sontag 1966)</b>, multi-channel video, 2023</span>
 					</div>
@@ -428,7 +430,7 @@
 		Flexslider 2.1 has known issues of manualControls setting with jQuery 1.9
 		Use jQuery 1.8 until Flexslider 2.2 stable version is released
 	-->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/jQuery.BlackAndWhite.min.js"></script>
 	<script src="js/modernizr.js"></script>
 	<script src="js/less-1.4.0.min.js"></script>
@@ -438,21 +440,14 @@
 
 
 	<script>
-		// Wait for DOM to be fully loaded
 		document.addEventListener('DOMContentLoaded', function() {
-			// Get the container that holds all project items
 			const container = document.querySelector('#works .container');
-			
-			// Get all direct permalink links (project items)
 			const items = container.querySelectorAll(':scope > a.permalink');
 			
-			// Loop through items, starting from index 2 (3rd item)
 			for (let i = 2; i < items.length; i += 3) {
-				// Create clearfix div
 				const clearfix = document.createElement('div');
 				clearfix.className = 'clear hide-under-tablet';
 				
-				// Insert after every third item
 				if (items[i].nextSibling) {
 					container.insertBefore(clearfix, items[i].nextSibling);
 				} else {
@@ -460,7 +455,7 @@
 				}
 			}
 		});
-		</script>
+	</script>
 
 
 
