update puna desc

--- a/project-punaLandscapes.html
+++ b/project-punaLandscapes.html
@@ -152,7 +152,7 @@
 							<p class="project-desc">2025, series of 30 photographs, archival pigment prints, various dimensions</p>
 							<p>Beginning with a single line and gradually building in complexity, the work breaks down the landscape into its most basic compositional elements. The photographic series was created in the Puna region of Argentina in March 2025.
 							</p><p>
-							Partially inspired by the work of my father (painter Luke Elwes), the photos are made through a physical and spiritual immersion into the landscape. They show how close observation reveals connections between small details and the larger landscape. Without obvious horizon lines, the photographs challenge conventional landscape reading and instead form alternative cartographies of this remote terrain, with each image functioning as a topological composition.
+							Partially inspired by the work of my father (painter Luke Elwes), the photos are made through a physical and spiritual immersion into the environment. Close observation reveals connections between small details and the larger terrain. Without obvious horizon lines, the photographs subvert tranditional landscapes and instead form alternative cartographies of this remote place.
 							</p>
 						</div><!-- // .box-info -->
 
