remove puna from homepage

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<section id="works" class="">
 		<div class="container">
 
-			<a href="project-punaLandscapes.html" class="permalink">				
+<!-- 			<a href="project-punaLandscapes.html" class="permalink">				
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-punaLandscapes.jpg" alt="Jake Elwes digital artist" />
@@ -141,7 +141,7 @@
 						<span style="display:block" class="category">photographic series, 2025</span>
 					</div>
 				</div>
-			</a>
+			</a> -->
 
 			<a href="project-termsandconditionsopera.html" class="permalink">				
 				<div class="desktop-4 tablet-6 columns">
