--- a/about.html
+++ b/about.html
@@ -428,7 +428,11 @@
 
 
 						<h4 id="groupshows">Selected Group Exhibitions and Projects</h4>
-
+						<p>
+							<b>2025</b>
+						</p>
+						<p>To be announced.
+						</p>
 						<p>
 							<b>2024</b>
 						</p>
