2025 shows update and css beautify

--- a/about.html
+++ b/about.html
@@ -336,23 +336,41 @@
 
 						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
 
-						<p></p>
-						<b>2025/26 (tba)</b> - Zizi in Motion (acquisition for permanent collection)</a>, <b>San Francisco Museum of Modern Art (SFMOMA), San Francisco</b>, US 
-					</p>	
-						<p></p>
-							<b>8th Feb - 4th May 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
-								href="https://www.hasselbladfoundation.org/en/portfolio_page/bugs-metamorphosis/">Bugs & Metamorphosis: Glitching Photography</a>, <b>Hasselblad Center, Gothenburg Museum of Art</b>, Sweden 
-						</p>		
-						<p></p>
-						<b>15th March - 25th April 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
-							href="https://www.upstreamgallery.nl/exhibitions/257/ghosts">Ghosts</a>, <b>Upstream Gallery</b>, Amsterdam, Netherlands 
-					</p>					
-						<p></p>
-							<b>13th Jun - 7th Sept 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
-								href="https://kunsthalaarhus.dk/en/Exhibitions/Kunsten-At-Fejle-The-Art-Of-Failing-1-Bugs-And-Metamorphosis">Kunsten at fejle / The Art of Failing 1: Bugs and Metamorphosis</a>, <b>Kunsthala Arhus</b>, Denmark 
-						</p>	
-						<p></p>
+						<p>
+						<b>2026 (dates to be announced soon)</b> - Zizi in Motion (acquisition for permanent collection)</a>, <b>San Francisco Museum of Modern Art (SFMOMA), San Francisco</b>, US 
+						</p>
 
+						<p>
+							<b>3rd Oct - 20th Dec 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
+								href="https://gazelliarthouse.com/exhibitions/200-subject-to-change-nouf-aljowaysir-morehshin-allahyari-memo-akten-brendan-dawes/">Subject to Change.</a> <b>Gazelli Art House</b>, Mayfair, London, UK
+						</p>	
+
+						<p>
+							<b>25th Sept - 13th Dec 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
+								href="https://prax.oregonstate.edu/visual-arts/upcoming/machinekind">machinekind</a>, <b>Patricia Valian Reser Center for the Creative Arts (PRAx) - Stirek Gallery</b>, Oregon State University, Oregon, USA
+						</p>	
+
+						<p>
+							<b>13th Sept - 14th Dec 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
+								href="https://platformpost.nl/en/program/arnhem-embodied-encryption-ada-ada-ada-morehshin">Embodied Encryption</a>, <b>POST</b>, Arnhem, Netherlands
+						</p>	
+
+						<p>
+							<b>24th Oct - 27th Oct 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
+								href="https://www.britishcouncil.pl/en/programmes/uk-poland-season-2025/events/patchlab">Patchlab Festival 2025</a>, <b>Potockich Palace Gallery (FutureEverything + Photon Foundation)</b>, Kraków, Poland
+						</p>	
+
+						<p>
+							<b>13th Jun - 7th Dec 2025</b> - <a id=show target="_blank" rel="noopener noreferrer"
+								href="https://kunsthalaarhus.dk/en/Exhibitions/Kunsten-At-Fejle-The-Art-Of-Failing-1-Bugs-And-Metamorphosis">Kunsten at fejle / The Art of Failing 1: Bugs and Metamorphosis</a>, <b>Kunsthala Arhus</b>, Denmark 
+						</p>
+
+						video Club
+
+
+
+
+						<!-- mozfest barcelona - books madeline & queer art-->
 						<br>
 						<br>
 
@@ -431,8 +449,18 @@
 						<p>
 							<b>2025</b>
 						</p>
-						<p>To be announced.
-						</p>
+					    <p>
+							<a id=show target="_blank" rel="noopener noreferrer"
+								href="https://www.hasselbladfoundation.org/en/portfolio_page/bugs-metamorphosis/">Bugs & Metamorphosis: Glitching Photography</a>, <b>Hasselblad Center, Gothenburg Museum of Art</b>, Sweden 
+						</p>	
+						<p>
+
+						<a id=show target="_blank" rel="noopener noreferrer"
+							href="https://www.upstreamgallery.nl/exhibitions/257/ghosts">Ghosts</a>, <b>Upstream Gallery</b>, Amsterdam, Netherlands 
+						</p>					
+	
+
+						<br>
 						<p>
 							<b>2024</b>
 						</p>
