doom scroll and tc opera vids

--- a/project-doomscroll.html
+++ b/project-doomscroll.html
@@ -111,7 +111,7 @@
 								method of recording time across a photograph.
 							</p>
 							<p>
-								To create work I performed an endurance challenge. I filmed myself doom-scrolling for 3
+								To create the work I performed an endurance challenge. I filmed myself doom-scrolling for 3
 								hours straight until my phone ran out of charge. Images and faces no longer meant
 								anything and as my back started to ache I began seeing only shapeless forms and colours.
 								These recordings are then turned into long photographic scrolls displaying the passage
@@ -123,7 +123,7 @@
 								</p>
 							</p>
 							<p>
-								The abstract, generative drawings with light convert time wasted on Instagram into something sublime.
+								The resulting abstracted, generative drawings with light convert time wasted on Instagram into something approaching the sublime.
 								The appropriated data passing through the lens are social media posts which people have
 								chosen to publicly share. Early utopian computer artists used code to make drawing
 								machines. ‘DoomScroll’ advances this process with results mediated through an
