--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -133,20 +133,15 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/5mSuU_eiPFo"
+				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/IJyQ9-tBpWI"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<br><br><br>
 
-				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/QZea-co5XAo"
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/i5jBfkpkUgI"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			<br><br><br>
-
-			<iframe id="vid1" width="100%" height="360" src="https://www.youtube.com/embed/8njianDthvY"
-			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-			webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-		<br><br><br>
 				
 
 
