doom scroll and tc opera vids

--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -94,7 +94,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Terms &amp; Conditions Opera: a Legalese Libretto</h3>
-							<p class="project-desc">2024, video &amp; music, series of 3, variable lengths
+							<p class="project-desc">2024, video &amp; music, series of 3
 							</p>
 
 							<p>
