--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -97,7 +97,7 @@
 							<h3 class="border-top">The Zizi Show</h3>
 							<p class="project-desc">2020, interactive performance
 							</p>
-							<p><a id="show" target="_blank" href="https://zizi.ai/">Visit ZIZI.AI</a></p>
+							<p><a id="show" target="_blank" href="https://zizi.jakeelwes.com/">Visit the Web App</a></p>
 								<!-- <br>(public access currently closed, <a id="show" href="mailto:zizidragshow@gmail.com">email zizidragshow@gmail.com</a> for access) -->
 							<p>Drag Queens, Drag Kings, Drag Things and Artificial Intelligence… <br>
 								The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a
@@ -121,7 +121,7 @@
 							<p>
 								<small>
 									More information at <a id="show" target="_blank"
-										href="https://zizi.ai/about">zizi.ai/about</a>
+										href="https://zizi.jakeelwes.com/about">zizi.ai/about</a>
 									and on <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>
 								</small>
 							</p>
@@ -252,7 +252,7 @@
 				</script>
 
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img 
+				<a id="show" target="_blank" href="https://zizi.jakeelwes.com/"><img 
 						src="images/project-zizi-show/amalgams.jpg" style="width:100%;  border-radius: 25px;"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 				<br><br>
@@ -264,21 +264,21 @@
 					<small>Making of The Zizi Show - Jake Elwes discusses Deepfake Drag</small><br><br>
 
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
+				<a id="show" target="_blank" href="https://zizi.jakeelwes.com/"><img src="images/project-zizi-show/controls.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/panel.jpg"
+				<a id="show" target="_blank" href="https://zizi.jakeelwes.com/"><img src="images/project-zizi-show/panel.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img
+				<a id="show" target="_blank" href="https://zizi.jakeelwes.com/"><img
 						src="images/project-zizi-show/full-browser.jpg" style="width:49%;margin-top:0px"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img
+				<a id="show" target="_blank" href="https://zizi.jakeelwes.com/"><img
 						src="images/project-zizi-show/close-browser.jpg" style="width:49%;margin-top:0px"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<br><small>The Zizi Show (2020), stills from zizi.ai</small><br><br>
+				<br><small>The Zizi Show (2020), stills from zizi.jakeelwes.com</small><br><br>
 
 				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
